@@ -1,0 +1,1 @@
+podman build -t whisper-cpu -f ./dockerfile-cpu
