@@ -8,12 +8,14 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
 ## [Unreleased]
 
 ### Added
+- file_proccessing.clj this file contains functions that can run transcriptions on a whole folder.
 
 ### Changed
 
 ### Removed
 
 ### Fixed
+- added download-models function to solve https://github.com/jakedn/whispering-alchemy/issues/3
 
 
 ## [1.0.0] - 2025-02-24
